--- a/app/globals.css
+++ b/app/globals.css
@@ -100,3 +100,16 @@ body {
     background-image: url("/images/bg-today-large.svg");
   }
 }
+
+/* Hide default scrollbar for all except Webkit browsers */
+.scrollbar::-webkit-scrollbar {
+  width: 1rem;
+}
+.scrollbar::-webkit-scrollbar-track {
+  background: var(--clr-neutral-800);
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--clr-neutral-800);
+  border-radius: var(--radius-full); /* fully rounded */
+  border: 0.5rem solid var(--clr-neutral-600);
+}
